dinoco_tests/tests/dinoco/ui/fail/extend_unknown_field.stderr
error[E0609]: no field `created_At` on type `&Post`
  --> tests/dinoco/ui/fail/extend_unknown_field.rs:29:5
   |
29 |     created_At: DateTimeUtc<Utc>,
   |     ^^^^^^^^^^ unknown field
   |
help: a field with a similar name exists
   |
29 -     created_At: DateTimeUtc<Utc>,
29 +     createdAt: DateTimeUtc<Utc>,
   |
